...
          <Pressable
            accessibilityLabel="Open Preview Panel"
            accessibilityRole="button"
            android_ripple={null}
            onPress={handleOpen}
            style={() => styles.fabButton}
            testID="preview-panel-fab"
          >
            {({ pressed }: { pressed: boolean }) => (
              <>
                {pressed && <Image source={fabRipple} style={styles.fabRipple} />}
                <Image source={fabIcon} style={styles.fabIcon} />
              </>
...
                  accessibilityLabel="Close Preview Panel"
                  accessibilityRole="button"
                  onPress={() => {
                    handleClose(false)
                  }}
                  style={styles.closeButton}
                  testID="preview-panel-close"
                >
                  <Text style={styles.closeButtonText}>×</Text>
                </Pressable>
              </View>
              <View style={styles.panelContainer}>
                <PreviewPanel {...previewPanelProps} />
...
